--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,6 @@
 NAME= btc
 CC= c++
-CFLAGS= -Wall -Wextra -Werror -std=c++98
-
+CFLAGS= -Wall -Wextra -Werror 
 MAIN= main.cpp
 
 NAMES= BitcoinExchange
